# Pyre

./: .clang-format  CMakeLists.txt  LICENSE  LOGBOOK.md  README.md
include/pyre/: linear.h
src/pyre/: linear.cpp  main.cpp
